# otoge-service

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
src/otoge_service/: entrypoint.py  exceptions.py  loggings.py  models.py  sessions.py  settings.py
src/otoge_service/providers/: usagicard.py
src/otoge_service/routes/: __init__.py  developers.py
src/otoge_service/routes/chunithm/: __init__.py  characters.py
src/otoge_service/routes/maimai/: __init__.py  chains.py  characters.py
src/otoge_service/routes/ongeki/: __init__.py  cards.py  skills.py
