[project]
name = "otoge-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TuRou", email = "turou@email.swu.edu.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "aiocache>=0.12.3",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.118.2",
    "httpx>=0.28.1",
    "maimai-py>=1.3.7rc6",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "sqlmodel>=0.0.27",
    "tenacity>=9.1.2",
    "tzdata>=2025.2",
    "uvicorn>=0.37.0",
]

[project.scripts]
otoge-service = "otoge_service.entrypoint:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
